add other format to create the Array List